fix(web) :: Popin not correctly displayed (aligned on right element) ok

--- a/www/Themes/Centreon-2/style.css
+++ b/www/Themes/Centreon-2/style.css
@@ -2572,11 +2572,11 @@ ul.module_list {
 #tourbus-leg-0-2,
 #tourbus-leg-0-3,
 #tourbus-leg-0-4,
-#tourbus-leg-0-5
- {
+#tourbus-leg-0-5 {
     position: absolute;
     top: 107px;
 }
+
 #tourbus-leg-0-6,
 #tourbus-leg-0-7,
 #tourbus-leg-0-8,
@@ -2584,6 +2584,7 @@ ul.module_list {
     position: absolute;
     top: 145px;
 }
+
 .tourbus-content {
     margin-bottom: 10px;
 }
